--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <div class="rules-header">
         <p id="rules-title">rules</p>
         <button id="rules-x">
-          <img id="img-close" src="/CSS-EXERCISE/EXERCISE-8/rock-paper-scissors-master/images/icon-close.svg">
+          <img id="img-close" src="/images/icon-close.svg">
         </button>
       </div>
-      <img id="rulesImg" src="/CSS-EXERCISE/EXERCISE-8/rock-paper-scissors-master/images/image-rules.svg">
+      <img id="rulesImg" src="/images/image-rules.svg">
     </div>
   </div>
 
@@ -44,25 +44,25 @@
         <!-- Papper -->
         <div class="circle-pick cp_papper">
           <div class="inner-circle">
-            <img id="imgRPS" src="/CSS-EXERCISE/EXERCISE-8/rock-paper-scissors-master/images/icon-paper.svg" alt="Papper">
+            <img id="imgRPS" src="/images/icon-paper.svg" alt="Papper">
           </div>
         </div>
 
         <!-- Scissors -->
         <div class="circle-pick cp_scissors">
           <div class="inner-circle">
-            <img id="imgRPS" src="/CSS-EXERCISE/EXERCISE-8/rock-paper-scissors-master/images/icon-scissors.svg" alt="Scissors">
+            <img id="imgRPS" src="/images/icon-scissors.svg" alt="Scissors">
           </div>
         </div>
 
         <!-- Rock -->
         <div class="circle-pick cp_rock">
           <div class="inner-circle">
-            <img id="imgRPS" src="/CSS-EXERCISE/EXERCISE-8/rock-paper-scissors-master/images/icon-rock.svg" alt="Rock">
+            <img id="imgRPS" src="/images/icon-rock.svg" alt="Rock">
           </div>
         </div>
 
-        <img class="tirangle" src="/CSS-EXERCISE/EXERCISE-8/rock-paper-scissors-master/images/bg-triangle.svg" alt="">
+        <img class="tirangle" src="/images/bg-triangle.svg" alt="">
       </div>
     </article>
 
@@ -77,19 +77,19 @@
           <!-- Picked Papper -->
           <div class="picked_circle papperPicked">
             <div class="picked_inner">
-              <img id="picked_imgRPS" src="/CSS-EXERCISE/EXERCISE-8/rock-paper-scissors-master/images/icon-paper.svg" alt="Papper">
+              <img id="picked_imgRPS" src="/images/icon-paper.svg" alt="Papper">
             </div>
           </div>
           <!-- Picked Scissors -->
           <div class="picked_circle scissorsPicked">
             <div class="picked_inner">
-              <img id="picked_imgRPS" src="/CSS-EXERCISE/EXERCISE-8/rock-paper-scissors-master/images/icon-scissors.svg" alt="Scissors">
+              <img id="picked_imgRPS" src="/images/icon-scissors.svg" alt="Scissors">
             </div>
           </div>          
           <!-- Picked Rock -->
           <div class="picked_circle rockPicked">
             <div class="picked_inner">
-              <img id="picked_imgRPS" src="/CSS-EXERCISE/EXERCISE-8/rock-paper-scissors-master/images/icon-rock.svg" alt="Rock">
+              <img id="picked_imgRPS" src="/images/icon-rock.svg" alt="Rock">
             </div>
           </div> 
           
@@ -116,13 +116,13 @@
           <!-- Picked Papper -->
           <div class="picked_circle papperPicked">
             <div class="picked_inner">
-              <img id="picked_imgRPS" src="/CSS-EXERCISE/EXERCISE-8/rock-paper-scissors-master/images/icon-paper.svg" alt="Papper">
+              <img id="picked_imgRPS" src="/images/icon-paper.svg" alt="Papper">
             </div>
           </div>
           <!-- Picked Scissors -->
           <div class="picked_circle scissorsPicked">
             <div class="picked_inner">
-              <img id="picked_imgRPS" src="/CSS-EXERCISE/EXERCISE-8/rock-paper-scissors-master/images/icon-scissors.svg" alt="Scissors">
+              <img id="picked_imgRPS" src="/images/icon-scissors.svg" alt="Scissors">
             </div>
             
           </div>      
@@ -130,7 +130,7 @@
           <!-- Picked Rock -->
           <div class="picked_circle rockPicked">
             <div class="picked_inner">
-              <img id="picked_imgRPS" src="/CSS-EXERCISE/EXERCISE-8/rock-paper-scissors-master/images/icon-rock.svg" alt="Rock">
+              <img id="picked_imgRPS" src="/images/icon-rock.svg" alt="Rock">
             </div>
           </div>  
 
@@ -147,13 +147,13 @@
     <button id="rules">rules</button>
   </main>
   <audio id="audioPick">
-    <source src="/CSS-EXERCISE/EXERCISE-8/rock-paper-scissors-master/Audio/mixPu.mp3" type="audio/mpeg">
+    <source src="/Audio/mixPu.mp3" type="audio/mpeg">
   </audio>
   <audio id="winner">
-    <source src="/CSS-EXERCISE/EXERCISE-8/rock-paper-scissors-master/Audio/win.wav" type="audio/mpeg">
+    <source src="/Audio/win.wav" type="audio/mpeg">
   </audio>
 </body>
-<script src="/CSS-EXERCISE/EXERCISE-8/rock-paper-scissors-master/game.js"></script>
+<script src="game.js"></script>
 </html>
 <!-- 
   <div class="attribution">
