--- a/index.html
+++ b/index.html
@@ -147,30 +147,11 @@
     <button id="rules">rules</button>
   </main>
   <audio id="audioPick">
-    <source src="/Audio/mixPu.mp3" type="audio/mpeg">
+    <source src="Audio/mixPu.mp3" type="audio/mpeg">
   </audio>
   <audio id="winner">
-    <source src="/Audio/win.wav" type="audio/mpeg">
+    <source src="Audio/win.wav" type="audio/mpeg">
   </audio>
 </body>
 <script src="game.js"></script>
 </html>
-<!-- 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
- -->
-
-<!-- 
-  Score
-  Rules
-
-  You Picked
-  The House Picked
-
-  You Win
-  You Lose
-
-  Play Again 
--->
