--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Comfortaa:wght@300..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Ramabhadra&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/Front-End_Webdeveloper.png">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="GameStyle.css">
   <title>Rock, Paper, Scissors | Frontend Mentor</title>
@@ -17,10 +17,10 @@
       <div class="rules-header">
         <p id="rules-title">rules</p>
         <button id="rules-x">
-          <img id="img-close" src="/images/icon-close.svg">
+          <img id="img-close" src="images/icon-close.svg">
         </button>
       </div>
-      <img id="rulesImg" src="/images/image-rules.svg">
+      <img id="rulesImg" src="images/image-rules.svg">
     </div>
   </div>
 
@@ -44,25 +44,25 @@
         <!-- Papper -->
         <div class="circle-pick cp_papper">
           <div class="inner-circle">
-            <img id="imgRPS" src="/images/icon-paper.svg" alt="Papper">
+            <img id="imgRPS" src="images/icon-paper.svg" alt="Papper">
           </div>
         </div>
 
         <!-- Scissors -->
         <div class="circle-pick cp_scissors">
           <div class="inner-circle">
-            <img id="imgRPS" src="/images/icon-scissors.svg" alt="Scissors">
+            <img id="imgRPS" src="images/icon-scissors.svg" alt="Scissors">
           </div>
         </div>
 
         <!-- Rock -->
         <div class="circle-pick cp_rock">
           <div class="inner-circle">
-            <img id="imgRPS" src="/images/icon-rock.svg" alt="Rock">
+            <img id="imgRPS" src="images/icon-rock.svg" alt="Rock">
           </div>
         </div>
 
-        <img class="tirangle" src="/images/bg-triangle.svg" alt="">
+        <img class="tirangle" src="images/bg-triangle.svg" alt="">
       </div>
     </article>
 
@@ -77,19 +77,19 @@
           <!-- Picked Papper -->
           <div class="picked_circle papperPicked">
             <div class="picked_inner">
-              <img id="picked_imgRPS" src="/images/icon-paper.svg" alt="Papper">
+              <img id="picked_imgRPS" src="images/icon-paper.svg" alt="Papper">
             </div>
           </div>
           <!-- Picked Scissors -->
           <div class="picked_circle scissorsPicked">
             <div class="picked_inner">
-              <img id="picked_imgRPS" src="/images/icon-scissors.svg" alt="Scissors">
+              <img id="picked_imgRPS" src="images/icon-scissors.svg" alt="Scissors">
             </div>
           </div>          
           <!-- Picked Rock -->
           <div class="picked_circle rockPicked">
             <div class="picked_inner">
-              <img id="picked_imgRPS" src="/images/icon-rock.svg" alt="Rock">
+              <img id="picked_imgRPS" src="images/icon-rock.svg" alt="Rock">
             </div>
           </div> 
           
@@ -116,13 +116,13 @@
           <!-- Picked Papper -->
           <div class="picked_circle papperPicked">
             <div class="picked_inner">
-              <img id="picked_imgRPS" src="/images/icon-paper.svg" alt="Papper">
+              <img id="picked_imgRPS" src="images/icon-paper.svg" alt="Papper">
             </div>
           </div>
           <!-- Picked Scissors -->
           <div class="picked_circle scissorsPicked">
             <div class="picked_inner">
-              <img id="picked_imgRPS" src="/images/icon-scissors.svg" alt="Scissors">
+              <img id="picked_imgRPS" src="images/icon-scissors.svg" alt="Scissors">
             </div>
             
           </div>      
@@ -130,7 +130,7 @@
           <!-- Picked Rock -->
           <div class="picked_circle rockPicked">
             <div class="picked_inner">
-              <img id="picked_imgRPS" src="/images/icon-rock.svg" alt="Rock">
+              <img id="picked_imgRPS" src="images/icon-rock.svg" alt="Rock">
             </div>
           </div>  
 
