--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <div class="rules-header">
         <p id="rules-title">rules</p>
         <button id="rules-x">
-          <img id="img-close" src="images/icon-close.svg">
+          <img id="img-close" src="images/icon-close.svg" alt="close">
         </button>
       </div>
-      <img id="rulesImg" src="images/image-rules.svg">
+      <img id="rulesImg" src="images/image-rules.svg" alt="rulse">
     </div>
   </div>
 
