--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/Front-End_Webdeveloper.png">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="GameStyle.css">
-  <title>Rock, Paper, Scissors | Frontend Mentor</title>
+  <title>Roshambo | Rock, Paper, Scissors</title>
 </head>
 <body>
   <div class="rules-holder">
