--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
   <title>Roshambo | Rock, Paper, Scissors</title>
 </head>
 <body>
+    <p id="developer" style="
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    font-size: .8rem;
+    font-weight: 600;
+    opacity: .7;
+    color:white;
+  ">CRUZ IZACH</p>
   <div class="rules-holder">
     <div class="rules">
       <div class="rules-header">
