--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     font-weight: 600;
     opacity: .7;
     color:white;
-  ">CRUZ IZACH</p>
+  ">Para sa attorney ko</p>
   <div class="rules-holder">
     <div class="rules">
       <div class="rules-header">
