--- a/index.html
+++ b/index.html
@@ -12,16 +12,7 @@
   <title>Roshambo | Rock, Paper, Scissors</title>
 </head>
 <body>
-    <p id="developer" style="
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    font-size: .8rem;
-    font-weight: 600;
-    opacity: .7;
-    color:white;
-  ">Para sa attorney ko</p>
+    <p id="developer">BY : Cruz Dawn</p>
   <div class="rules-holder">
     <div class="rules">
       <div class="rules-header">
